--- a/index.html
+++ b/index.html
@@ -24,16 +24,78 @@
 
 <body>
     <!-- Hero -->
-    <section class="hero has-background-black">
+    <section class="hero">
         <div class="hero-body">
             <div class="container">
                 <figure class="image center">
-                    <img src="src/img/bulma-logo-white.png" alt="Logo Bulma" style="max-width: 512px;">
+                    <img src="src/img/bulma-logo.png" alt="Logo Bulma" style="max-width: 160px;">
                 </figure>
             </div>
         </div>
     </section>
     <!-- Hero -->
+
+    <!-- Section -->
+    <section class="section has-background-light">
+        <div class="container">
+            <div class="columns is-multiline">
+                <div class="column is-one-third">
+                    <article class="media notification is-info">
+                        <figure class="media-left">
+                            <span class="icon is-medium">
+                                <i class="fab fa-2x fa-css3-alt"></i>
+                            </span>
+                        </figure>
+                        <div class="media-content">
+                            <div class="content">
+                                <h1 class="title is-size-4">Bulma ?</h1>
+                                <p class="is-size-5">Bulma is a modern CSS framework from @jghtms, based on flexbox.
+                                    Using Bulma, we can describe our website's design using just classes.
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+
+                <div class="column is-one-third">
+                    <article class="media notification is-primary">
+                        <figure class="media-left">
+                            <span class="icon is-medium">
+                                <i class="fa fa-2x fa-bars"></i>
+                            </span>
+                        </figure>
+                        <div class="media-content">
+                            <div class="content">
+                                <h1 class="title is-size-4">... Flexbox ?</h1>
+                                <p class="is-size-5">Flexbox is a CSS spec that makes sectionning and aligning more
+                                    natural. We don't need to know Flexbox but it's how Bulma works behind-the-scenes.
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+
+                <div class="column is-one-third">
+                    <article class="media notification is-warning">
+                        <figure class="media-left">
+                            <span class="icon is-medium">
+                                <i class="fas fa-2x fa-shield-alt"></i>
+                            </span>
+                        </figure>
+                        <div class="media-content">
+                            <div class="content">
+                                <h1 class="title is-size-4">... Classes ?</h1>
+                                <p class="is-size-5">Instead of writing our CSS per-element, we can use predefined
+                                    classes. With enough classes, we can describe our website design using semantics.
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section -->
 </body>
 
 </html>
